media query to fix styling on mobile
relates to #111

--- a/public/main.css
+++ b/public/main.css
@@ -881,3 +881,10 @@ a:hover {
     font-size: 14px;
     color: #526173;
 }
+
+@media screen and (max-width: 768px) {
+  #d3-container {
+      width: 100vw;
+      height: 100vh;
+  }
+}
